examples/test/testpolicy5630.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5630
  namespace: namespace148
spec:
  podSelector:
    matchLabels:
      key8: value4
      key9: value0
      key13: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value16
          key36: value9
          key48: value38
      podSelector:
        matchLabels:
          key14: value38
          key46: value6
